--- a/prostyle.css
+++ b/prostyle.css
@@ -78,9 +78,10 @@
   }
         body {
             font-family: Arial, sans-serif;
-            background-color: #f8f9fa;
+            background-color:#f0fff4;
+             color: #0f5132;
             margin: 0;
-            padding: 0;
+            padding: 1rem;
         }
 /* ========== HERO SECTION ========== */
 #hero {
